--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-/build
-/dist
-/ebin
-*~
+.sw?
+.*.sw?
+*.beam
+/.erlang.mk/
+/cover/
+/deps/
+/doc/
+/ebin/
+/logs/
+/plugins/
+
+/rabbitmq_management_themes.d
