--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 # vim:sw=2:et:
 
+os: linux
 dist: xenial
-sudo: false
-language: erlang
+language: elixir
 notifications:
   email:
     recipients:
@@ -20,22 +20,18 @@ env:
     - secure: Go9RB9bowcI5EPSOGKndu1CQmzS0uj1nbsbywm+4XXenwNjB6zZlbzM2ctXD4eWtyvR8KHvBalTJ4gk5E8Nj2wjhin+V6G2+iOZlaciCu+rujIsig9OMi22QC+1K0ZrL1M0ltTKYXs0vPCD5OC667qs2xdAWwUV/2khCYKVBWaY=
     - secure: Ak83imZqOn2MHeO/GsB/mXV835OkNreBgVNX4BeH/XRQsC/gcUz01XiwYDmSrk1fqCMwDgxaSGTLVLzg9WqCk6IoslewTEOK59j7w3an9sikCu597mkd6iAI3B0ubLE/Lf3bbwqZbPQ5+ax+EXfZ/kEnSBrqfSPTszWQswLUMPY=
 
-otp_release:
-  - "21.3"
+    # $base_rmq_ref is used by rabbitmq-components.mk to select the
+    # appropriate branch for dependencies.
+    - base_rmq_ref=master
 
-before_script:
-  - elixir --version
-  # The checkout made by Travis is a "detached HEAD" and branches
-  # information is missing. Our Erlang.mk's git_rmq fetch method relies
-  # on it, so we need to restore it.
-  #
-  # We simply fetch master and, if it exists, v3.8.x branches. A branch
-  # is created, pointing to the detached HEAD.
-  - |
-    git checkout -B "${TRAVIS_TAG:-${TRAVIS_BRANCH}}"
-    git remote add upstream https://github.com/$TRAVIS_REPO_SLUG.git
-    git fetch upstream v3.8.x:v3.8.x || :
-    git fetch upstream master:master || :
+elixir:
+  - '1.9'
+otp_release:
+  - '21.3'
+  - '22.2'
+
+install:
+  - mix local.hex --force
 
 script:
   - make xref
